--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
        "'#standardize data\\ndata_mean = train_images.mean().astype(np.float32)\\ndata_std = train_images.std().astype(np.float32)\\n\\ndef standardize(x): \\n    return (x-data_mean)/data_std\\n\\ntrain_images = standardize(train_images)'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,65 +190,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12min 31s\n"
+      "Wall time: 53min 34s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "no_train = 400\n",
+    "no_train = 800\n",
     "train = train_images[:no_train]\n",
     "train_l = train_labels[:no_train]\n",
     "test = train_images[no_train:no_train+400]\n",
     "test_l = train_labels[no_train:no_train+400]\n",
-    "lambda_opt = 1/(36*200.)\n",
-    "C_opt = 1./(2*lambda_opt*len(train))\n",
-    "sigma_opt = 0.005\n",
+    "lambda_opt = 1/(32*200.)\n",
+    "#C_opt = 1./(2*lambda_opt*len(train))\n",
+    "C_list = [18,18,18,18,17,18,16,16,16,18,18,20,20,18,18]\n",
+    "#sigma_opt = 0.005\n",
+    "sigma_list = [0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.0025, 0.005, 0.005, 0.005, 0.0025, 0.005]\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters = ecoc(\n",
-    "    train, train_l, penalty=C_opt, \n",
-    "    kernel=gaussian_kernel, list_sigma=[sigma_opt]*15)"
+    "    train, train_l, penalty_list=C_list, \n",
+    "    kernel=gaussian_kernel, list_sigma=sigma_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attention, data point could not be uniquely classified, index 53 possible classification [3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 57 possible classification [0, 9]\n",
-      "Attention, data point could not be uniquely classified, index 103 possible classification [0, 3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 120 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 139 possible classification [3, 5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 148 possible classification [0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 241 possible classification [2, 4]\n",
-      "Attention, data point could not be uniquely classified, index 286 possible classification [5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 334 possible classification [3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 367 possible classification [0, 5, 6]\n"
+      "Attention, data point could not be uniquely classified, index: 47, possible classification: [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index: 219, possible classification: [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index: 307, possible classification: [5, 9]\n",
+      "Attention, data point could not be uniquely classified, index: 348, possible classification: [4, 8]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.82999999999999996"
+       "0.89000000000000001"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
