--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -10,187 +10,49 @@
    "source": [
     "import numpy as np\n",
     "import scipy\n",
-    "\n",
-    "# to save data\n",
-    "import pickle\n",
-    "\n",
+    "import pickle # to save data\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "from sklearn.metrics.pairwise import pairwise_kernels\n",
     "from scipy.optimize import minimize\n",
     "from scipy.spatial.distance import hamming\n",
     "from mySVM_class import *\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv('Data/train.csv', nrows = 5000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'#standardize data\\ndata_mean = train_images.mean().astype(np.float32)\\ndata_std = train_images.std().astype(np.float32)\\n\\ndef standardize(x): \\n    return (x-data_mean)/data_std\\n\\ntrain_images = standardize(train_images)'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 964 ms\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
+    "train = pd.read_csv('Data/train.csv', nrows = 10000)\n",
     "images = [\"%s%s\" %(\"pixel\",pixel_no) for pixel_no in range(0,28**2)]\n",
     "train_images = np.array(train[images], dtype=np.float)/100\n",
-    "train_labels = np.array(train['label'])\n",
-    "label0 = np.array([1 if i==0 else -1 for i in train_labels])\n",
-    "\n",
-    "'''#standardize data\n",
-    "data_mean = train_images.mean().astype(np.float32)\n",
-    "data_std = train_images.std().astype(np.float32)\n",
-    "\n",
-    "def standardize(x): \n",
-    "    return (x-data_mean)/data_std\n",
-    "\n",
-    "train_images = standardize(train_images)'''"
+    "train_labels = np.array(train['label'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def ecoc(labeled_data, labels, kernel=scalar_product, penalty=1, list_sigma=[0.1]*15):\n",
-    "\n",
-    "    labels=labels.astype(int);\n",
-    "    l=np.shape(labeled_data)[0];\n",
-    "    n=np.shape(labeled_data)[1]\n",
-    "    num_classifiers=15;\n",
-    "    ecoc_labels=np.zeros((l,15));\n",
-    "    \n",
-    "    # compute barycenters of the points of each label\n",
-    "    barycenters = np.zeros((10,n));\n",
-    "        \n",
-    "    for i in range(10):\n",
-    "        ind = labels == i\n",
-    "        barycenters[i] = np.mean(labeled_data[ind], axis=0)\n",
-    "    \n",
-    "    # define code_word matrix, the ith row corresponds to the number i\n",
-    "    # each column corresponds to a classifier that will have to be trained\n",
-    "    code_words=np.array([\n",
-    "        [ 1,  1, -1, -1, -1, -1,  1, -1,  1, -1, -1,  1,  1, -1,  1],\n",
-    "        [-1, -1,  1,  1,  1,  1, -1,  1, -1,  1,  1, -1, -1,  1, -1],\n",
-    "        [ 1, -1, -1,  1, -1, -1, -1,  1,  1,  1,  1, -1,  1, -1,  1],\n",
-    "        [-1, -1,  1,  1, -1,  1,  1,  1, -1, -1, -1, -1,  1, -1,  1],\n",
-    "        [ 1,  1,  1, -1,  1, -1,  1,  1, -1, -1,  1, -1, -1, -1,  1],\n",
-    "        [-1,  1, -1, -1,  1,  1, -1,  1,  1,  1, -1, -1, -1, -1,  1],\n",
-    "        [ 1, -1,  1,  1,  1, -1, -1, -1, -1,  1, -1,  1, -1, -1,  1],\n",
-    "        [-1, -1, -1,  1,  1,  1,  1, -1,  1, -1,  1,  1, -1, -1,  1],\n",
-    "        [ 1,  1, -1,  1, -1,  1,  1, -1, -1,  1, -1, -1, -1,  1,  1],\n",
-    "        [-1,  1,  1,  1, -1, -1, -1, -1,  1, -1,  1, -1, -1,  1,  1]]);\n",
-    "    \n",
-    "    # up until now training data has labels from 0 to 9\n",
-    "    # now these are replaced by the 15 digit string given by code_words\n",
-    "    for j in range(l):\n",
-    "        ecoc_labels[j]=code_words[labels[j]];\n",
-    "    \n",
-    "    list_supp_ind = [];\n",
-    "    list_alpha =[];\n",
-    "    list_b =[];\n",
-    "    list_kernel=[];\n",
-    "    \n",
-    "    # class an svm object for each classifier\n",
-    "    # here would be the possibility to parallelize\n",
-    "    for classifier in range(15):\n",
-    "        svm=mySVM(kernel=kernel, penalty=penalty, sigma=list_sigma[classifier]);\n",
-    "        svm.fit(labeled_data, ecoc_labels[:,classifier]);\n",
-    "        list_supp_ind.append(svm.supp_indices);\n",
-    "        list_alpha.append(svm.alpha);\n",
-    "        list_b.append(svm.b);\n",
-    "        list_kernel.append(svm.kernel);\n",
-    "        \n",
-    "    # pickle dump to save and call saved objects    \n",
-    "    #pickle.dump((ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, list_sigma, code_words, barycenters), \n",
-    "     #           open( \"trained_ecoc_\"+str(l)+\".dat\", \"wb\" ))\n",
-    "    \n",
-    "    # now I need to call a binary classifier for each column of ecoc_labels\n",
-    "    # from decision functions we get seperating hyperplanes, margin, ... \n",
-    "    # return those\n",
-    "    \n",
-    "    \n",
-    "    return ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters;"
+    "Test the ecoc algorithm:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# suppose we have an unlabeled data point\n",
-    "def predict_ecoc(unlabeled_data, labeled_data, ecoc_labels, list_supp_ind, \n",
-    "                 list_alpha, list_b, list_kernel, code_words, barycenters):\n",
-    "    # every row is one data point\n",
-    "    # number of rows = # of data points\n",
-    "    l=np.shape(unlabeled_data)[0];\n",
-    "    new_labels=np.zeros((l,15));\n",
-    "    temp_label_ind=[];\n",
-    "    final_labels = np.array(['inf']*l);\n",
-    "    \n",
-    "    for classifier in range(15):\n",
-    "        a_supp = list_alpha[classifier][list_supp_ind[classifier]];\n",
-    "        ecoc_labels_supp = ecoc_labels[list_supp_ind[classifier],classifier]\n",
-    "        a_times_labels=np.multiply(a_supp, ecoc_labels_supp)\n",
-    "        \n",
-    "        for i in range(l):\n",
-    "            # i_th row of kernel matrix k\n",
-    "            k=np.array([list_kernel[classifier](unlabeled_data[i],y) for y in labeled_data[list_supp_ind[classifier]]])\n",
-    "            \n",
-    "            # list of lists with 15 entries, one per classifier\n",
-    "            new_labels[i][classifier]=np.sign(np.dot(a_times_labels,k)+list_b[classifier]);\n",
-    "    \n",
-    "        \n",
-    "    for i in range(l):\n",
-    "        ham_dist = [hamming(new_labels[i], code_words[j]) for j in range(10)]\n",
-    "        temp_label_ind = [j for j in range(len(ham_dist)) if ham_dist[j] == min(ham_dist)]\n",
-    "        if len(temp_label_ind)!=1:\n",
-    "            print(\"Attention, data point could not be uniquely classified, index \" \n",
-    "                  + str(i) + \" possible classification \" + str(temp_label_ind));\n",
-    "            \n",
-    "            # ask which barycenter is closest out of temp_label_ind\n",
-    "            final_labels[i] = np.min(np.argmin([np.linalg.norm(unlabeled_data[i]-barycenters[k]) for k in temp_label_ind]))\n",
-    "            \n",
-    "            \n",
-    "        else:\n",
-    "            final_labels[i] = ham_dist.index(min(ham_dist));\n",
-    "        \n",
-    "   \n",
-    "    return final_labels;\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -200,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 53min 34s\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -211,11 +73,9 @@
     "train_l = train_labels[:no_train]\n",
     "test = train_images[no_train:no_train+400]\n",
     "test_l = train_labels[no_train:no_train+400]\n",
-    "lambda_opt = 1/(32*200.)\n",
-    "#C_opt = 1./(2*lambda_opt*len(train))\n",
-    "C_list = [18,18,18,18,17,18,16,16,16,18,18,20,20,18,18]\n",
-    "#sigma_opt = 0.005\n",
-    "sigma_list = [0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.0025, 0.005, 0.005, 0.005, 0.0025, 0.005]\n",
+    "lambda_opt = 1./(400*np.array([18,18,18,18,17,18,16,16,16,18,18,20,20,18,18])) #optimal lambdas found via cross validation\n",
+    "C_list = 1./(2*len(train)*lambda_opt)  #compute optimal C from optimal lambda\n",
+    "sigma_list = [0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.0025, 0.005, 0.005, 0.005, 0.0025, 0.005] #optimal sigmas found via cross validation\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters = ecoc(\n",
     "    train, train_l, penalty_list=C_list, \n",
     "    kernel=gaussian_kernel, list_sigma=sigma_list)"
@@ -226,7 +86,7 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -256,6 +116,13 @@
     "final_labels = final_labels.astype(np.int64)\n",
     "score = sum([test_l[i] == final_labels[i] for i in range(len(final_labels))])/float(len(test_l))\n",
     "score\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations: More training points result in less points that cannot be uniquely classified. More training points improve the performance (400 training points $\\rightarrow$ 83%, 800 training points $\\rightarrow$ 89%,)"
    ]
   },
   {
