neuer SMO, ungefähr 4 mal so schnell

--- a/ecoc-Copy1.ipynb
+++ b/ecoc-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,11 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "images = [\"%s%s\" %(\"pixel\",pixel_no) for pixel_no in range(0,28**2)]\n",
     "train_images = np.array(train[images], dtype=np.float)/100\n",
@@ -65,18 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from mySVM_class_new import *\n"
+    "from mySVM_class import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -213,13 +224,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_im = 200;\n",
+    "number_of_im = 1200;\n",
     "train_images_test = train_images[:number_of_im]\n",
     "train_labels_test = train_labels[:number_of_im]\n",
     "np.shape(train_images_test)[0]"
@@ -227,11 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1h 56min 3s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# call classifier with pickle.load\n",
@@ -249,11 +279,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "Attention, data point could not be uniquely classified, index 17 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 45 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 47 possible classification [1, 7]\n",
+      "Attention, data point could not be uniquely classified, index 80 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 92 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 124 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 127 possible classification [2, 4]\n",
+      "Attention, data point could not be uniquely classified, index 141 possible classification [1, 4]\n",
+      "Attention, data point could not be uniquely classified, index 153 possible classification [0, 6]\n",
+      "Attention, data point could not be uniquely classified, index 175 possible classification [6, 9]\n",
+      "Attention, data point could not be uniquely classified, index 183 possible classification [3, 5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 256 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 268 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 283 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 290 possible classification [0, 6]\n",
+      "number of correctly classified labels:  232  out of  300\n"
+     ]
+    }
+   ],
    "source": [
     "# \"unknown\" data to be classified\n",
     "number_of_test_data = 300\n",
@@ -286,57 +340,6 @@
    "source": [
     "Since keeping $C = 1$ fixed and increasing the number of training points does not seem to guarantee a good increase in success, let us now, for fixed number_of_im = 100, test multiple $\\lambda$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "lambdavector = np.linspace(0.01,50, num = 50)\n",
-    "\n",
-    "number_of_im = 100;\n",
-    "train_images_test = train_images[:number_of_im]\n",
-    "train_labels_test = train_labels[:number_of_im]\n",
-    "np.shape(train_images_test)[0]\n",
-    "\n",
-    "# \"unknown\" data to be classified\n",
-    "number_of_test_data = 300\n",
-    "test_data = train_images[number_of_im:number_of_im+number_of_test_data]\n",
-    "\n",
-    "for lambd in lambdavector:\n",
-    "    # call classifier with pickle.load\n",
-    "    ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=ecoc(train_images_test, train_labels_test,penalty=1/(2*number_of_im*lambd))\n",
-    "    #ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
-    "    # call predict function\n",
-    "    predicted_labels_test=predict_ecoc(train_images[number_of_im:number_of_im+number_of_test_data], \n",
-    "                                       train_images[:number_of_im], ecoc_labels, list_supp_ind, list_alpha, \n",
-    "                                       list_b, list_kernel, code_words, barycenters)\n",
-    "    predicted_labels_test = predicted_labels_test.astype(float)\n",
-    "    # print(\"predicted labels: \", predicted_labels_test)\n",
-    "\n",
-    "    # get actual labels\n",
-    "    train_labels_test=train_labels[number_of_im:number_of_im+number_of_test_data]\n",
-    "    train_labels_test = train_labels_test.astype(float)\n",
-    "    # print(\"actual labels: \", train_labels_test)\n",
-    "    \n",
-    "    print(\"number of correctly classified labels: \", sum(predicted_labels_test.astype(int)==train_labels_test.astype(int)), \n",
-    "          \" out of \", number_of_test_data);\n",
-    "\n",
-    "    # check if there is are a couple of classifiers who make more mistakes than others\n",
-    "    # then we could possibly change some of the parameters\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
