--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
        "42000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,18 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from mySVM_class import *\n"
+    "from mySVM_class_new import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
        "1000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1h 4min 41s\n"
+      "Wall time: 16min 39s\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -291,30 +291,31 @@
       "300\n",
       "Attention, data point could not be uniquely classified, index 6 possible classification [0, 9]\n",
       "Attention, data point could not be uniquely classified, index 19 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 29 possible classification [0, 6]\n",
       "Attention, data point could not be uniquely classified, index 45 possible classification [0, 5]\n",
       "Attention, data point could not be uniquely classified, index 47 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 48 possible classification [1, 2]\n",
       "Attention, data point could not be uniquely classified, index 50 possible classification [0, 9]\n",
       "Attention, data point could not be uniquely classified, index 64 possible classification [4, 7]\n",
       "Attention, data point could not be uniquely classified, index 72 possible classification [3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 84 possible classification [0, 5, 6]\n",
       "Attention, data point could not be uniquely classified, index 86 possible classification [2, 4]\n",
+      "Attention, data point could not be uniquely classified, index 92 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 107 possible classification [5, 9]\n",
       "Attention, data point could not be uniquely classified, index 112 possible classification [3, 5]\n",
       "Attention, data point could not be uniquely classified, index 122 possible classification [0, 3]\n",
       "Attention, data point could not be uniquely classified, index 125 possible classification [1, 2, 4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 127 possible classification [2, 8]\n",
       "Attention, data point could not be uniquely classified, index 135 possible classification [0, 3, 6]\n",
       "Attention, data point could not be uniquely classified, index 136 possible classification [7, 8]\n",
       "Attention, data point could not be uniquely classified, index 148 possible classification [1, 4]\n",
       "Attention, data point could not be uniquely classified, index 157 possible classification [3, 6]\n",
       "Attention, data point could not be uniquely classified, index 161 possible classification [1, 8]\n",
       "Attention, data point could not be uniquely classified, index 163 possible classification [0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 164 possible classification [4, 8]\n",
       "Attention, data point could not be uniquely classified, index 179 possible classification [0, 9]\n",
       "Attention, data point could not be uniquely classified, index 184 possible classification [5, 9]\n",
       "Attention, data point could not be uniquely classified, index 196 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 280 possible classification [5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 292 possible classification [2, 8]\n",
-      "number of correctly classified labels:  221  out of  300\n"
+      "Attention, data point could not be uniquely classified, index 280 possible classification [1, 8]\n",
+      "Attention, data point could not be uniquely classified, index 297 possible classification [3, 5]\n",
+      "number of correctly classified labels:  223  out of  300\n"
      ]
     }
    ],
@@ -363,7 +364,9 @@
      "output_type": "stream",
      "text": [
       "300\n",
+      "Attention, data point could not be uniquely classified, index 16 possible classification [7, 8]\n",
       "Attention, data point could not be uniquely classified, index 21 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 25 possible classification [5, 6]\n",
       "Attention, data point could not be uniquely classified, index 31 possible classification [3, 9]\n",
       "Attention, data point could not be uniquely classified, index 43 possible classification [1, 4]\n",
       "Attention, data point could not be uniquely classified, index 62 possible classification [2, 8]\n",
@@ -380,6 +383,7 @@
       "Attention, data point could not be uniquely classified, index 185 possible classification [0, 5]\n",
       "Attention, data point could not be uniquely classified, index 189 possible classification [6, 9]\n",
       "Attention, data point could not be uniquely classified, index 197 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 210 possible classification [3, 9]\n",
       "Attention, data point could not be uniquely classified, index 213 possible classification [1, 2, 8]\n",
       "Attention, data point could not be uniquely classified, index 216 possible classification [3, 5]\n",
       "Attention, data point could not be uniquely classified, index 221 possible classification [2, 7]\n",
@@ -390,7 +394,7 @@
       "Attention, data point could not be uniquely classified, index 276 possible classification [1, 7]\n",
       "Attention, data point could not be uniquely classified, index 277 possible classification [5, 6]\n",
       "Attention, data point could not be uniquely classified, index 281 possible classification [7, 8]\n",
-      "number of correctly classified labels:  179  out of  300\n"
+      "number of correctly classified labels:  176  out of  300\n"
      ]
     },
     {
@@ -408,7 +412,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-10-dcc2f39aa8f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mlambd\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlambdavector\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[1;31m# call classifier with pickle.load\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbarycenters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mecoc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_images_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels_test\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpenalty\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mlambd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[1;31m#ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[1;31m# call predict function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-8-097841d4575e>\u001b[0m in \u001b[0;36mecoc\u001b[0;34m(labeled_data, labels, kernel, penalty, list_sigma)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mbarycenters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabeled_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mind\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[1;31m# define code_word matrix, the ith row corresponds to the number i\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-097841d4575e>\u001b[0m in \u001b[0;36mecoc\u001b[0;34m(labeled_data, labels, kernel, penalty, list_sigma)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mbarycenters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabeled_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mind\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[1;31m# define code_word matrix, the ith row corresponds to the number i\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
      ]
     }
