mit neuen optimalen Parametern

--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -22,31 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv('Data/train.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "42000"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 969 ms\n"
+     ]
     }
    ],
    "source": [
@@ -66,7 +52,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.00015625,  0.00015625,  0.00015625,  0.000125  ,  0.00013889,\n",
+       "         0.00015625,  0.00015625,  0.00013889,  0.00013889,  0.00013889,\n",
+       "         0.00015625,  0.00015625,  0.00015625,  0.00013889,  0.00015625]),\n",
+       " array([ 0.004,  0.002,  0.002,  0.003,  0.002,  0.002,  0.003,  0.003,\n",
+       "         0.004,  0.003,  0.002,  0.003,  0.003,  0.004,  0.002]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get optimal parameters obtained from Cross_Validation\n",
+    "lambda_opt, sigma_opt = pickle.load( open(\"lambdasigma_opt.dat\", \"rb\" ) )\n",
+    "lambda_opt = np.array(lambda_opt)\n",
+    "sigma_opt = np.array(sigma_opt)\n",
+    "lambda_opt, sigma_opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -76,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 0 ns\n"
+      "Wall time: 47min 2s\n"
      ]
     }
    ],
@@ -87,9 +103,8 @@
     "train_l = train_labels[:no_train]\n",
     "test = train_images[no_train:no_train+400]\n",
     "test_l = train_labels[no_train:no_train+400]\n",
-    "lambda_opt = 1./(400*np.array([18,18,18,18,17,18,16,16,16,18,18,20,20,18,18])) #optimal lambdas found via cross validation\n",
     "C_list = 1./(2*len(train)*lambda_opt)  #compute optimal C from optimal lambda\n",
-    "sigma_list = [0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.0025, 0.005, 0.005, 0.005, 0.0025, 0.005] #optimal sigmas found via cross validation\n",
+    "sigma_list = sigma_opt\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters = ecoc(\n",
     "    train, train_l, penalty_list=C_list, \n",
     "    kernel=gaussian_kernel, list_sigma=sigma_list)"
@@ -97,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -107,19 +122,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attention, data point could not be uniquely classified, index: 47, possible classification: [2, 8]\n",
-      "Attention, data point could not be uniquely classified, index: 219, possible classification: [2, 7]\n",
-      "Attention, data point could not be uniquely classified, index: 307, possible classification: [5, 9]\n",
-      "Attention, data point could not be uniquely classified, index: 348, possible classification: [4, 8]\n"
+      "Attention, data point could not be uniquely classified, index: 21, possible classification: [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index: 220, possible classification: [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index: 307, possible classification: [5, 9]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.89000000000000001"
+       "0.91000000000000003"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,21 +147,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Observations: More training points result in less points that cannot be uniquely classified. More training points improve the performance (400 training points $\\rightarrow$ 83%, 800 training points $\\rightarrow$ 89%,)"
    ]
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -169,16 +170,16 @@
     {
      "data": {
       "text/plain": [
-       "500"
+       "200"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_of_im = 500;\n",
+    "number_of_im = 200;\n",
     "train_images_test = train_images[:number_of_im]\n",
     "train_labels_test = train_labels[:number_of_im]\n",
     "np.shape(train_images_test)[0]"
@@ -186,21 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 5min 29s\n"
+     "ename": "NameError",
+     "evalue": "name 'train_images_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-3ddeabd76e2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m# call classifier with pickle.load\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_sigma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbarycenters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mecoc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_images_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_sigma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbarycenters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"trained_ecoc_\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\".dat\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_images_test' is not defined"
      ]
     }
    ],
    "source": [
-    "%%time\n",
     "# call classifier with pickle.load\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, list_sigma, code_words, barycenters=ecoc(train_images_test, train_labels_test)\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, list_sigma, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -226,29 +230,25 @@
      "output_type": "stream",
      "text": [
       "300\n",
-      "Attention, data point could not be uniquely classified, index 10 possible classification [3, 9]\n",
-      "Attention, data point could not be uniquely classified, index 15 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 18 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 20 possible classification [6, 9]\n",
-      "Attention, data point could not be uniquely classified, index 37 possible classification [3, 9]\n",
-      "Attention, data point could not be uniquely classified, index 47 possible classification [2, 8]\n",
-      "Attention, data point could not be uniquely classified, index 51 possible classification [1, 8]\n",
-      "Attention, data point could not be uniquely classified, index 68 possible classification [2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 83 possible classification [0, 6]\n",
-      "Attention, data point could not be uniquely classified, index 118 possible classification [1, 8]\n",
-      "Attention, data point could not be uniquely classified, index 134 possible classification [5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 137 possible classification [4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 154 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 157 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 176 possible classification [0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 181 possible classification [5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 206 possible classification [3, 9]\n",
-      "Attention, data point could not be uniquely classified, index 215 possible classification [3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 222 possible classification [0, 6]\n",
-      "Attention, data point could not be uniquely classified, index 225 possible classification [7, 8]\n",
-      "Attention, data point could not be uniquely classified, index 252 possible classification [0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 267 possible classification [0, 5]\n",
-      "number of correctly classified labels:  211  out of  300\n"
+      "Attention, data point could not be uniquely classified, index 45 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 53 possible classification [0, 3, 6]\n",
+      "Attention, data point could not be uniquely classified, index 82 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 93 possible classification [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index 113 possible classification [1, 7]\n",
+      "Attention, data point could not be uniquely classified, index 120 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 147 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 153 possible classification [0, 3, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 156 possible classification [5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 169 possible classification [0, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 174 possible classification [0, 6]\n",
+      "Attention, data point could not be uniquely classified, index 182 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 197 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 216 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 263 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 282 possible classification [1, 4]\n",
+      "Attention, data point could not be uniquely classified, index 290 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 293 possible classification [1, 7]\n",
+      "number of correctly classified labels:  207  out of  300\n"
      ]
     }
    ],
